[package]
name = "e310x"
version = "0.10.0"
repository = "https://github.com/riscv-rust/e310x"
authors = ["David Craven <david@craven.ch>", "The RISC-V Team <risc-v@teams.rust-embedded.org>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "With svd2rust generated peripherals for Freedom E310 MCU's."
keywords = ["riscv", "register", "peripheral"]
license = "ISC"
rust-version = "1.59"

[dependencies]
vcell = "0.1.3"
riscv = "0.8.0"

[features]
rt = []
g002 = []

[package.metadata.docs.rs]
features = ["rt", "g002"]
