[package]
name = "e310x-hal"
version = "0.10.0"
authors = ["David Craven <david@craven.ch>"]
repository = "https://github.com/riscv-rust/e310x-hal"
categories = ["embedded", "hardware-support", "no-std"]
description = "HAL for the E310x family of microcontrollers."
keywords = ["riscv", "e310", "hal"]
license = "ISC"
edition = "2018"
rust-version = "1.59"

[dependencies]
embedded-hal = { version = "0.2.6", features = ["unproven"] }
nb = "1.0.0"
riscv = "0.8.0"
e310x = { version = "0.10.0", features = ["rt"] }

[features]
g002 = ["e310x/g002"]
virq = []

[package.metadata.docs.rs]
features = ["g002"]
