[package]
name = "e310x-hal-async"
version = "0.1.0"
edition = "2024"

[dependencies]
embedded-hal = "1.0.0"
embedded-hal-async = { version = "1.0.0", optional =  true }
embedded-hal-nb = "1.0.0"
embedded-io = "0.6.1"
e310x = { path = "../e310x", version = "0.12.0", features = ["rt", "critical-section"] }
portable-atomic = { version = "1.9", default-features = false}
riscv = { version = "0.12.1", features = ["critical-section-single-hart"] }
riscv-peripheral = { version = "0.2.1", features = ["aclint-hal-async"] }
critical-section = "1.2.0"
heapless = "0.8.0"

[features]
g002 = ["e310x/g002"]
v-trap = ["e310x/v-trap"]
