[package]
name = "e310x-hal"
version = "0.12.0"
authors = ["David Craven <david@craven.ch>"]
repository = "https://github.com/riscv-rust/e310x"
categories = ["embedded", "hardware-support", "no-std"]
description = "HAL for the E310x family of microcontrollers."
keywords = ["riscv", "e310", "hal"]
license = "ISC"
edition = "2021"
rust-version = "1.79"

[dependencies]
embedded-hal = "1.0.0"
embedded-hal-nb = "1.0.0"
embedded-io = "0.6.1"
e310x = { path = "../e310x", version = "0.12.0", features = ["rt", "critical-section"] }
nb = "1.0.0"
portable-atomic = { version = "1.9", default-features = false }
riscv = { workspace = true, features = ["critical-section-single-hart"] }

# Async HAL dependencies
riscv-rt = { workspace = true, optional = true }
embedded-hal-async = { version = "1.0.0", optional =  true }
critical-section = { workspace = true, optional = true }

[features]
g002 = ["e310x/g002"]
v-trap = ["e310x/v-trap"]
async = ["riscv-rt", "embedded-hal-async", "critical-section"]

[package.metadata.docs.rs]
features = ["g002"]
