[package]
name = "e310x"
version = "0.12.0"
repository = "https://github.com/riscv-rust/e310x"
authors = ["David Craven <david@craven.ch>", "The RISC-V Team <risc-v@teams.rust-embedded.org>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "With svd2rust generated peripherals for Freedom E310 MCU's."
keywords = ["riscv", "register", "peripheral"]
license = "ISC"
rust-version = "1.76"
edition = "2021"

[dependencies]
critical-section = { version = "1.2.0", optional = true }
riscv = "0.14.0"
riscv-peripheral = "0.3.0"
riscv-rt = { version = "0.15.0", features = ["no-interrupts"], optional = true }
vcell = "0.1.3"

[features]
rt = ["riscv-rt"]
v-trap = ["rt", "riscv-rt/v-trap"]
g002 = []

[package.metadata.docs.rs]
features = ["rt", "g002", "critical-section"]
