[package]
name = "e310x"
version = "0.12.0"
repository = "https://github.com/riscv-rust/e310x"
authors = ["David Craven <david@craven.ch>", "The RISC-V Team <risc-v@teams.rust-embedded.org>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "With svd2rust generated peripherals for Freedom E310 MCU's."
keywords = ["riscv", "register", "peripheral"]
license = "ISC"
rust-version = "1.76"
edition = "2021"

[dependencies]
critical-section = { workspace = true, optional = true }
riscv = { workspace = true }
riscv-peripheral = { workspace = true }
riscv-rt = { workspace = true, optional = true, features = ["no-interrupts", "single-hart"] }
vcell = "0.1.3"

[features]
rt = ["riscv-rt"]
v-trap = ["rt", "riscv-rt/v-trap"]
g002 = []

[package.metadata.docs.rs]
features = ["rt", "g002", "critical-section"]
