[package]
name = "hifive1"
version = "0.13.0"
repository = "https://github.com/riscv-rust/e310x"
authors = ["David Craven <david@craven.ch>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Board support crate for HiFive1 and LoFive boards"
keywords = ["riscv", "register", "peripheral"]
license = "ISC"
edition = "2021"
rust-version = "1.76"

[dependencies]
critical-section = { workspace = true }
e310x-hal = { path = "../e310x-hal", version = "0.12.0" }
nb = "1.0.0"
riscv = { workspace = true }

[features]
board-hifive1 = []
board-hifive1-revb = ["e310x-hal/g002"]
board-redv = ["e310x-hal/g002"]
board-lofive = []
board-lofive-r1 = ["e310x-hal/g002"]
v-trap = ["e310x-hal/v-trap"]

[package.metadata.docs.rs]
features = ['board-hifive1-revb']
